# starsector-neolauncher

./: .gitignore  Cargo.toml  LICENSE  Readme.md  tmp.html
crates/game-launcher/: Cargo.toml
crates/game-launcher/src/: launch_config.rs  lib.rs  test.rs
crates/mod-downloader/: Cargo.toml  Readme.md
crates/mod-downloader/src/: lib.rs  mod_src.rs  plugin_loader.rs  source_config.rs  tests.rs
crates/mod-src/: Cargo.toml
crates/mod-src/setting/: log4rs.yaml
crates/mod-src/setting/scripts/: test.lua
crates/mod-src/setting/sources/: config.toml
crates/mod-src/src/: main.rs
crates/sources-manager/: Cargo.toml
crates/sources-manager/src/: lib.rs  mod_info.rs  mod_source.rs  plugin_loader.rs  source_config.rs  tests.rs
crates/sources-manager/test/: config.toml
plugins/example/: Cargo.toml
plugins/example/src/: lib.rs
plugins/fossic-cn/: Cargo.toml
plugins/fossic-cn/src/: lib.rs
plugins/fossic-plugin/: Cargo.toml
plugins/test-plugin/: Cargo.toml
plugins/test-plugin/src/: lib.rs
setting/: log4j.properties  log4rs.yaml  startup.yaml
setting/sources/: fossic.toml
src/: main.rs
