[package]
name = "starsector-mod-manager"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "plugins/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sources-manager = { path = "crates/sources-manager" }
log = "0.4.27"
tokio = { version = "1.40.0", features = ["full"] }
libloading = "0.8.8"
reqwest = "0.12.20"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
sources-manager = { path = "crates/sources-manager" }
log4rs = "1.3.0"
log = "0.4.27"
