[package]
name = "starsector-mod-manager"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "plugins/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sources-manager = { path = "crates/sources-manager" }
game-launcher = { path = "crates/game-launcher" }
log = "0.4.27"
tokio = { version = "1.40.0", features = ["full"] }
libloading = "0.8.8"
reqwest = "0.12.20"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"

[dependencies]
sources-manager = { path = "crates/sources-manager" }
game-launcher = { path = "crates/game-launcher" }
tokio = { version = "1.40.0", features = ["full"] }
log4rs = "1.3.0"
log = "0.4.27"
clap = { version = "4.5.40", features = ["derive"] }
