[package]
name = "sources-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8.8"
log = "0.4.27"
log4rs = "1.3.0"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
sxd-document = { version = "0.3.2", features = ["compile_failure"] }
sxd-xpath = "0.4.2"
toml = "0.8.23"

[lib]
crate-type = ["rlib"]
