[package]
name = "sources-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
log4rs = "1.3.0"
tokio = { version = "1.40.0", features = ["full"] }
libloading = "0.8.8"
reqwest = "0.12.20"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"


[lib]
crate-type = ["rlib"]
